@@ -1,3 +1,7 @@
+drkns 10.10.2016 02:27:15 +0200 - build 4817
+
+1. Уточнение 4816.
+
 drkns 09.10.2016 21:48:44 +0200 - build 4816
 
 1. Рефакторинг.
